fix: color wrapping

--- a/src/headers/SiteHeader.scss
+++ b/src/headers/SiteHeader.scss
@@ -14,6 +14,7 @@
   --notice-text-font-size: var(--bloom-font-size-xs);
   --notice-display-mobile: block;
   --notice-display-desktop: block;
+  --wrapped-background-color: var(--bloom-color-gray-200);
 
   // Logo
   --logo-background-color: var(--bloom-color-white);
@@ -411,6 +412,14 @@
 
 .site-header__dropdown-title-split {
   padding-right: var(--bloom-s1);
+}
+
+.site-header__navbar-wrapped {
+  background-color: var(--wrapped-background-color);
+}
+
+.site-header__navbar-inline {
+  background-color: var(--background-color);
 }
 
 .site-header__link {
